add employee name filter for finance module

--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -177,8 +177,8 @@
     //    }
 
     function onFilterChanged() {
-        var key = mini.get("nameFilter").getValue();
-        grid.load({key: key});
+        var employeeName = mini.get("nameFilter").getValue();
+        grid.load({employeeName: employeeName});
     }
 
 </script>
