--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -28,7 +28,8 @@
         <tr>
             <td style="width:100%;">
                 <a class="mini-button" iconCls="icon-save" plain="true" onclick="saveData()">保存</a>
-                <a class="mini-button" iconCls="icon-node" plain="true" onclick="calculateCommission()">计算提成</a>
+                <a class="mini-button" iconCls="icon-node" plain="true" onclick="calculateFirstCommission()">首次提成</a>
+                <a class="mini-button" iconCls="icon-node" plain="true" onclick="calculateBalanceCommission()">二次提成</a>
                 <a class="mini-button" iconCls="icon-upload" plain="true" onclick="ExportExcel()">导出Excel</a>
             </td>
         </tr>
@@ -55,6 +56,8 @@
                        onvaluechanged="onFilterChanged()"/>
             </div>
             <div field="acNumber" width="60" headerAlign="center" allowSort="false">受理编号
+                <input id="acNumberFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="50"
+                       onvaluechanged="onFilterChanged()"/>
             </div>
             <div field="contractId" width="80" headerAlign="center" allowSort="false">工程编号
                 <input id="contractFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="50"
@@ -87,7 +90,9 @@
 
                     <div field="contractTotal" width="100" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">合同价
                     </div>
-                    <div field="purchasingCost"  width="80" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">代采金额
+                    <div field="purchaseAgentContractFee"  width="80" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">代采金额
+                        <input property="editor" vtype="float" class="mini-textbox" style="width:100%;" minWidth="80"/></div>
+                    <div field="purchasingCost"  width="80" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">代采金额折算后
                         <input property="editor" vtype="float" class="mini-textbox" style="width:100%;" minWidth="80"/></div>
                     <div field="commissionBase" width="80" headerAlign="center" numberFormat="¥#,0.00" allowSort="false">折算后合同价
                     </div>
@@ -100,10 +105,13 @@
                     <div field="firstCommission" width="60" headerAlign="center" numberFormat="¥#,0.00"   summaryType="sum" dataType="currency"
                          currencyUnit="￥"  allowSort="false">首提
                     </div>
-                    <div field="firstCommissionDate" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+
+                    <div field="firstCommissionDate" width="80" headerAlign="center"  allowSort="false" dateFormat="yyyy-MM">
                         首提日期
-                        <input id="firstCommissionDateFilter" property="filter" class="mini-datepicker" style="width:100%;"
+                        <input id="firstCommissionDateFilter" property="filter" class="mini-monthpicker" style="width:100%;"
                                minWidth="100" onvaluechanged="onFilterChanged"/>
+                        <input id="firstCommission" property="firstCommissionDate" class="mini-monthpicker" style="width:100%;"
+                               minWidth="100" readonly="true"/>
                     </div>
                 </div>
             </div>
@@ -113,7 +121,7 @@
                     <div field="projectChangeTotal" width="100" numberFormat="¥#,0.00"  headerAlign="center" allowSort="false">变更总价
                         <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
                     </div>
-                    <div field="balanceTime" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+                    <div field="balanceTime" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM">
                         结算日期
                         <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
                         <input property="filter" class="mini-datepicker" style="width:100%;" minWidth="100"/>
@@ -122,7 +130,7 @@
                         二次提成
                     </div>
                     <div field="balanceCommissionDate" width="60" headerAlign="center" allowSort="false"
-                         dateFormat="yyyy-MM-dd">
+                         dateFormat="yyyy-MM">
                         二次提成日期
                         <input property="filter" class="mini-datepicker" style="width:100%;" minWidth="60"/>
                     </div>
@@ -227,12 +235,34 @@
         });
     }
 
-    function calculateCommission() {
+    function calculateFirstCommission() {
         var data = grid.getSelecteds();
         var json = mini.encode(data);
         grid.loading("保存中，请稍后......");
         $.ajax({
-            url: '../ws/commission/v1/calculateCommission',
+            url: '../ws/commission/v1/calculateFirstCommission',
+            data: json,
+            type: 'post',
+            dataType: 'json',
+            contentType: 'application/json;charset=utf-8',
+            success: function (text) {
+                grid.reload();
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                alert(jqXHR);
+                alert(textStatus);
+                alert(errorThrown);
+                alert(jqXHR.responseText);
+            }
+        });
+    }
+
+      function calculateBalanceCommission() {
+        var data = grid.getSelecteds();
+        var json = mini.encode(data);
+        grid.loading("保存中，请稍后......");
+        $.ajax({
+            url: '../ws/commission/v1/calculateBalanceCommission',
             data: json,
             type: 'post',
             dataType: 'json',
@@ -252,6 +282,7 @@
      function onFilterChanged() {
         var designer = mini.get("designerFilter").getValue();
         var commissionState = mini.get("commissionStateFilter").getValue();
+        var acNumber = mini.get("acNumberFilter").getValue();
         var contractId = mini.get("contractFilter").getValue();
         var payContractRatio = mini.get("payContractFilter").getValue();
         var payProjectRatio = mini.get("payProjectFilter").getValue();
@@ -262,6 +293,7 @@
             designer: designer,
             designerAssistant: designerAssistant,
             commissionState: commissionState,
+            acNumber: acNumber,
             contractId: contractId,
             payContractRatio: payContractRatio,
             payProjectRatio: payProjectRatio,
