update finance module

--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -52,46 +52,52 @@
                 <input property="editor" class="mini-combobox" style="width:100%;" textField="text" valueField="value"
                        url="../ws/employee/v1/attendance" required="true" allowInput="true"/>
             </div>
-            <div field="bonus" width="50" headerAlign="center" allowSort="true" vtype="float">提成
+            <div field="bonusCard" width="100" headerAlign="center" allowSort="true" vtype="float">提成（卡）
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="performanceAppraisal" width="50" headerAlign="center" allowSort="true" vtype="float">绩效
+            <div field="bonusCash" width="100" headerAlign="center" allowSort="true" vtype="float">提成（现金）
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="otherSubsidy" width="50" headerAlign="center" allowSort="true" vtype="float">其他补贴
+            <div field="performanceAppraisalCard" width="100" headerAlign="center" allowSort="true" vtype="float">绩效（卡）
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="charge" width="50" headerAlign="center" allowSort="true" vtype="float">扣款
+            <div field="performanceAppraisalCash" width="100" headerAlign="center" allowSort="true" vtype="float">绩效（现金）
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            </div>
+            <div field="otherSubsidy" width="100" headerAlign="center" allowSort="true" vtype="float">其他补贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            </div>
+            <div field="charge" width="100" headerAlign="center" allowSort="true" vtype="float">扣款
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
             <div field="chargeComments" width="100" headerAlign="center" allowSort="true">扣款说明
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="exhibitionCharge" width="50" headerAlign="center" allowSort="true" vtype="float">会展扣款
+            <div field="exhibitionCharge" width="100" headerAlign="center" allowSort="true" vtype="float">会展扣款
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="casualLeave" width="50" headerAlign="center" allowSort="true" vtype="float">事假
+            <div field="casualLeave" width="100" headerAlign="center" allowSort="true" vtype="float">事假
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="sickLeave" width="50" headerAlign="center" allowSort="true" vtype="float">病假
+            <div field="sickLeave" width="100" headerAlign="center" allowSort="true" vtype="float">病假
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="storageCharge" width="50" headerAlign="center" allowSort="true" vtype="float">保管
+            <div field="storageCharge" width="100" headerAlign="center" allowSort="true" vtype="float">保管
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="grossPay" width="50" headerAlign="center" allowSort="true">应发工资
+            <div field="grossPay" width="100" headerAlign="center" allowSort="true">应发工资
             </div>
-            <div field="medicalInsurance" width="50" headerAlign="center" allowSort="true" vtype="float">代扣社保
+            <div field="medicalInsurance" width="100" headerAlign="center" allowSort="true" vtype="float">代扣社保
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="housingFund" width="50" headerAlign="center" allowSort="true" vtype="float">代扣公积金
+            <div field="housingFund" width="100" headerAlign="center" allowSort="true" vtype="float">代扣公积金
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="beforeTaxSalary" width="50" headerAlign="center" allowSort="true">税前工资
+            <div field="beforeTaxSalary" width="100" headerAlign="center" allowSort="true">税前工资
             </div>
-            <div field="personalIncomeTax" width="50" headerAlign="center" allowSort="true">个人所得税
+            <div field="personalIncomeTax" width="100" headerAlign="center" allowSort="true">个人所得税
             </div>
-            <div field="afterTaxSalary" width="50" headerAlign="center" allowSort="true">应发工资
+            <div field="afterTaxSalary" width="100" headerAlign="center" allowSort="true">应发工资
             </div>
         </div>
     </div>
