--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -41,7 +41,7 @@
          url="../ws/finance/v1/finances"
          ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
          idField="id" sizeList="[5,10,20,50]" pageSize="10" allowCellEdit="true" allowCellSelect="true"
-         multiSelect="true" showFilterRow="true">
+         multiSelect="true" showFilterRow="true" showSummaryRow="true" ondrawsummarycell="onDrawSummaryCell">
         <div property="columns">
             <div type="indexcolumn"></div>
             <div field="employeeName" width="100" headerAlign="center" allowSort="true">姓名
@@ -85,7 +85,7 @@
             <div field="storageCharge" width="100" headerAlign="center" allowSort="true" vtype="float">保管
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="grossPay" width="100" headerAlign="center" allowSort="true">应发工资
+            <div field="grossPay" width="100" headerAlign="center" allowSort="true">应发工资（卡）
             </div>
             <div field="medicalInsurance" width="100" headerAlign="center" allowSort="true" vtype="float">代扣社保
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
@@ -97,7 +97,9 @@
             </div>
             <div field="personalIncomeTax" width="100" headerAlign="center" allowSort="true">个人所得税
             </div>
-            <div field="afterTaxSalary" width="100" headerAlign="center" allowSort="true">应发工资
+            <div field="afterTaxSalary" width="100" headerAlign="center" allowSort="true">实发工资（卡）
+            </div>
+            <div field="salaryCash" width="100" headerAlign="center" allowSort="true">实发工资（现金）
             </div>
         </div>
     </div>
@@ -151,7 +153,7 @@
         var month = mini.get('combo1').getValue();
         var data = {'finances': finances, 'month': month};
         var json = mini.encode(data);
-        alert(json);
+
         grid.loading("保存中，请稍后......");
         $.ajax({
             url: '../ws/finance/v1/finances',
@@ -174,6 +176,46 @@
     function onFilterChanged() {
         var employeeName = mini.get("nameFilter").getValue();
         grid.load({employeeName: employeeName});
+    }
+
+    function onDrawSummaryCell(e) {
+        var rows = e.data;
+
+        if (e.field == "grossPay") {
+            var total = 0;
+            for (var i = 0, l = rows.length; i < l; i++) {
+                var row = rows[i];
+                var t = row.grossPay;
+                if (isNaN(t)) continue;
+                total += t;
+            }
+
+            e.cellHtml = "应发工资（卡）: " + total;
+        }
+
+        if (e.field == "afterTaxSalary") {
+            var total = 0;
+            for (var i = 0, l = rows.length; i < l; i++) {
+                var row = rows[i];
+                var t = row.afterTaxSalary;
+                if (isNaN(t)) continue;
+                total += t;
+            }
+
+            e.cellHtml = "实发工资（卡）: " + total;
+        }
+
+        if (e.field == "salaryCash") {
+            var total = 0;
+            for (var i = 0, l = rows.length; i < l; i++) {
+                var row = rows[i];
+                var t = row.salaryCash;
+                if (isNaN(t)) continue;
+                total += t;
+            }
+
+            e.cellHtml = "实发工资（现金）: " + total;
+        }
     }
 
 </script>
