--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -32,7 +32,9 @@
 
                 <form id="upload" action="../ws/commission/v1/upload" method="post" enctype="multipart/form-data">
                     <input class="mini-htmlfile" name="Fdata" limitType="*.xlsx"/> <input type="submit" value="导入设计助理"/>
+                    <a class="mini-button" iconCls="icon-node" plain="true" onclick="onFilterChanged()">刷新</a>
                 </form>
+
 
             </td>
         </tr>
@@ -93,8 +95,6 @@
 
                     <div field="contractTotal" width="100" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">合同价
                     </div>
-                    <div field="purchaseAgentContractFee"  width="80" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">代采金额
-                        <input property="editor" vtype="float" class="mini-textbox" style="width:100%;" minWidth="80"/></div>
                     <div field="purchasingCost"  width="80" numberFormat="¥#,0.00" headerAlign="center" allowSort="false">代采金额折算后
                         <input property="editor" vtype="float" class="mini-textbox" style="width:100%;" minWidth="80"/></div>
                     <div field="commissionBase" width="80" headerAlign="center" numberFormat="¥#,0.00" allowSort="false">折算后合同价
@@ -134,9 +134,9 @@
                     <div field="balanceCommissionDate" width="60" headerAlign="center" allowSort="false"
                          dateFormat="yyyy-MM">
                         二次提成日期
-                        <input property="filter" class="mini-datepicker" style="width:100%;" minWidth="60"/>
+                        <input id="balanceCommissionDateFilter" property="filter" class="mini-monthpicker" style="width:100%;" minWidth="60" onvaluechanged="onFilterChanged()" />
                     </div>
-                </div>
+                </div>ss
             </div>
 
             <div header="设计助理提成">
@@ -158,7 +158,7 @@
                     <div field="designerAssistantCommissionDate" width="60" headerAlign="center" allowSort="false"
                          dateFormat="yyyy-MM-dd">
                         提成日期
-                        <input property="filter" class="mini-datepicker" style="width:100%;" minWidth="60"/>
+                        <input id="designerAssistantCommissionDateFilter" property="filter" class="mini-monthpicker" style="width:100%;" minWidth="60" onvaluechanged="onFilterChanged()" />
                     </div>
                 </div>
             </div>
@@ -170,6 +170,8 @@
             </div>
             <div field="branch" width="80" headerAlign="center" allowSort="false">网点
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <input id="branchFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="80"
+                       onvaluechanged="onFilterChanged()"/>
             </div>
             <div field="actualEndTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 实际竣工
@@ -191,14 +193,15 @@
 <!--导出Excel相关HTML-->
 <form id="excelForm" action="../ws/commission/v1/export" method="get">
     <input type="hidden" name="designer" id="designer"/>
-    <input type="hidden" name="contractState" id="contractState"/>
+    <input type="hidden" name="branch" id="branch"/>
+    <input type="hidden" name="acNumber" id="acNumber"/>
     <input type="hidden" name="commissionState" id="commissionState"/>
-    <input type="hidden" name="actualStartTime" id="actualStartTime"/>
-    <input type="hidden" name="actualEndTime" id="actualEndTime"/>
-    <input type="hidden" name="contractDate" id="contractDate"/>
+    <input type="hidden" name="payContractRatio" id="payContractRatio"/>
+    <input type="hidden" name="payProjectRatio" id="payProjectRatio"/>
+    <input type="hidden" name="designerAssistant" id="designerAssistant"/>
     <input type="hidden" name="firstCommissionDate" id="firstCommissionDate"/>
-    <input type="hidden" name="balanceTime" id="balanceTime"/>
     <input type="hidden" name="balanceCommissionDate" id="balanceCommissionDate"/>
+    <input type="hidden" name="designerAssistantCommissionDate" id="designerAssistantCommissionDate"/>
 </form>
 
 <script type="text/javascript">
@@ -207,7 +210,7 @@
     var grid = mini.get("datagrid1");
     grid.load();
 
-    function saveData() {
+     function saveData() {
 
         grid.validate();
         if (grid.isValid() == false) {
@@ -283,28 +286,34 @@
     }
 
      function onFilterChanged() {
+        var branch = mini.get("branchFilter").getValue();
         var designer = mini.get("designerFilter").getValue();
         var commissionState = mini.get("commissionStateFilter").getValue();
         var acNumber = mini.get("acNumberFilter").getValue();
-        var contractId = mini.get("contractFilter").getValue();
         var payContractRatio = mini.get("payContractFilter").getValue();
         var payProjectRatio = mini.get("payProjectFilter").getValue();
         var designerAssistant = mini.get("designerAssistantFilter").getValue();
         var firstCommissionDate = mini.get("firstCommissionDateFilter").getText();
-        alert(commissionState);
+        var balanceCommissionDate = mini.get("balanceCommissionDateFilter").getText();
+        var designerAssistantCommissionDate = mini.get("designerAssistantCommissionDateFilter").getText();
+
+
         grid.load({
             designer: designer,
             designerAssistant: designerAssistant,
             commissionState: commissionState,
             acNumber: acNumber,
-            contractId: contractId,
             payContractRatio: payContractRatio,
             payProjectRatio: payProjectRatio,
             firstCommissionDate: firstCommissionDate,
+            balanceCommissionDate: balanceCommissionDate,
+            designerAssistantCommissionDate: designerAssistantCommissionDate,
+            branch: branch
         });
     }
 
     function ExportExcel() {
+        var branch = mini.get("branchFilter").getValue();
         var designer = mini.get("designerFilter").getValue();
         var commissionState = mini.get("commissionStateFilter").getValue();
         var acNumber = mini.get("acNumberFilter").getValue();
@@ -312,10 +321,21 @@
         var payProjectRatio = mini.get("payProjectFilter").getValue();
         var designerAssistant = mini.get("designerAssistantFilter").getValue();
         var firstCommissionDate = mini.get("firstCommissionDateFilter").getText();
+        var balanceCommissionDate = mini.get("balanceCommissionDateFilter").getText();
+        var designerAssistantCommissionDate = mini.get("designerAssistantCommissionDateFilter").getText();
 
         document.getElementById("designer").value = designer;
+        document.getElementById("branch").value = branch;
+        document.getElementById("acNumber").value = acNumber;
         document.getElementById("commissionState").value = commissionState;
+
+        document.getElementById("payContractRatio").value = payContractRatio;
+        document.getElementById("payProjectRatio").value = payProjectRatio;
+        document.getElementById("designerAssistant").value = designerAssistant;
         document.getElementById("firstCommissionDate").value = firstCommissionDate;
+
+        document.getElementById("balanceCommissionDate").value = balanceCommissionDate;
+        document.getElementById("designerAssistantCommissionDate").value = designerAssistantCommissionDate;
 
         var excelForm = document.getElementById("excelForm");
         excelForm.submit();
