replace position type to string

--- a/src/main/webapp/dms/overview.html
+++ b/src/main/webapp/dms/overview.html
@@ -18,9 +18,9 @@
     </style>
 </head>
 <body>
-<h2>DMS</h2>
+<h2>上海佳园建筑装潢有限责任公司</h2>
 <br/>
-
+室内设计及装饰，建筑装饰工程，园林古建筑建设工程专业讯息工期，园林工程，花卉，树木销售。【依法须经批准的项目，经相关部门批准后方可开展经营活动】
 
 <!--<a href="http://www.miniui.com/bbs" target="_blank">提交BUG</a> -->
 <br/><br/>
