--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -181,6 +181,17 @@
         grid.load({employeeName: employeeName});
     }
 
+    $(document).ajaxComplete(function (event, jqXHR, options) {
+        var str = jqXHR.responseText;
+        var json = JSON.parse(str);
+        var code = json.code;
+        if (code != 1000) {
+            setTimeout(function () {
+                top.location.href = "../dms/login.html";
+            }, 1500);
+        }
+    })
+
 </script>
 
 </body>
