--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -231,6 +231,17 @@
         excelForm.submit();
     }
 
+    $(document).ajaxComplete(function (event, jqXHR, options) {
+        var str = jqXHR.responseText;
+        var json = JSON.parse(str);
+        var code = json.code;
+        if (code != 1000) {
+            setTimeout(function () {
+                top.location.href = "../dms/login.html";
+            }, 1500);
+        }
+    })
+
 </script>
 
 </body>
