--- a/src/main/webapp/dms/login.html
+++ b/src/main/webapp/dms/login.html
@@ -133,11 +133,12 @@
             dataType: 'json',
             contentType: "application/json;charset=utf-8",
             success: function (text) {
-                if (text) {
+                if (text.code == 1000) {
+                    mini.Cookie.set('Token', text.data);
                     loginWindow.hide();
                     mini.loading("登录成功，马上转到系统...", "登录成功");
                     setTimeout(function () {
-                        window.location = "./index.html";
+                        window.location = "../dms/index.html";
                     }, 1500);
                 } else {
                     document.getElementById("passwordError").innerHTML = "密码错误";
@@ -170,7 +171,7 @@
                     loginWindow.hide();
                     mini.loading("注册成功，马上转到系统...", "注册成功");
                     setTimeout(function () {
-                        window.location = "./index.html";
+                        window.location = "../dms/index.html";
                     }, 1500);
                 } else {
                     // server error
